Width fixed, looks too ugly stretched

--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 25%;
-    min-width: 450px;
+    width: 490px;
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(151, 148, 148);
